--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -430,9 +430,10 @@ emoji=^(?!.*[🇦-🇿]{2}).*(中[国國]|[广廣贵貴]州|深圳|北京|上海
 emoji=^(?!.*[🇦-🇿]{2}).*(?i:(?<![\da-z.])(CH?N|China)(?!\d*[a-z.])),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
+# 代理组配置部分
 custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
 
-custom_proxy_group=⚡低延迟`url-test`^`https://www.gstatic.com/generate_204`30,,100
+custom_proxy_group=⚡低延迟`url-test`^`https://www.gstatic.com/generate_204`15,,100
 custom_proxy_group=👆🏻指定`select`^
 
 custom_proxy_group=🛩️墙内`select`[]DIRECT
@@ -441,8 +442,11 @@ custom_proxy_group=📺B站`select`[]🛩️墙内`[]DIRECT
 custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他`[]✈️起飞`[]👆🏻指定
 custom_proxy_group=📱电报`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
 custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
+custom_proxy_group=🎮游戏平台`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他`[]👆🏻指定
+custom_proxy_group=Ⓜ️微软服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他
 custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告
 
+# 区域节点分组保持不变
 custom_proxy_group=🇭🇰香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
 custom_proxy_group=🇹🇼台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
 custom_proxy_group=🇸🇬新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
@@ -450,32 +454,56 @@ custom_proxy_group=🇯🇵日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://
 custom_proxy_group=🇺🇸美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,300
 custom_proxy_group=🎏其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`30,,100
 
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
+# 规则集部分优化
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/ChinaOnly.list
+# 优先匹配广告拦截规则
 ruleset=💩广告,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/BanProgramAD1.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+# 加入隐私保护规则
+ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+
+# 先匹配直连规则
+ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/UnBan1.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+
+# 特定应用规则按照使用频率排序
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=📺B站,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
-ruleset=📺B站,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/bili.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/UnBan1.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+
+# 常用服务规则
+ruleset=🤖AI,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/AI.list
+ruleset=📱电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+# 增加游戏平台规则
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+# 增加微软规则
+ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+
+# 国内域名和IP规则
 ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/GoogleCN.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
-ruleset=📱电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🤖AI,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/AI.list
+
+# 国外网站
 ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+# 增加社交媒体规则
+ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
+
+# 漏网之鱼放最后
 ruleset=🐟漏网之鱼,[]FINAL
 
 # 在文件末尾添加DNS配置部分
