--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -430,65 +430,46 @@ emoji=^(?!.*[🇦-🇿]{2}).*(中[国國]|[广廣贵貴]州|深圳|北京|上海
 emoji=^(?!.*[🇦-🇿]{2}).*(?i:(?<![\da-z.])(CH?N|China)(?!\d*[a-z.])),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
-# 代理组配置部分
-custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
-
-custom_proxy_group=⚡低延迟`url-test`^`https://www.gstatic.com/generate_204`15,,100
-custom_proxy_group=👆🏻指定`select`^
-
-custom_proxy_group=🛩️墙内`select`[]DIRECT
-custom_proxy_group=💩广告`select`[]REJECT
-custom_proxy_group=📺B站`select`[]🛩️墙内`[]DIRECT
-custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他`[]✈️起飞`[]👆🏻指定
-custom_proxy_group=📱电报`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
-custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
-custom_proxy_group=🎮游戏平台`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他`[]👆🏻指定
-custom_proxy_group=Ⓜ️微软服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他
-custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告
-
-# 区域节点分组保持不变
-custom_proxy_group=🇭🇰香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
-custom_proxy_group=🇹🇼台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
-custom_proxy_group=🇸🇬新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
-custom_proxy_group=🇯🇵日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
-custom_proxy_group=🇺🇸美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,300
-custom_proxy_group=🎏其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`30,,100
-
-
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# 规则集部分优化
+# 优化规则匹配顺序，提高匹配效率
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-# 优先匹配广告拦截规则
+# 合并相似广告规则，减少重复
+ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=💩广告,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/BanProgramAD1.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-# 加入隐私保护规则
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 
-# 先匹配直连规则
-ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/UnBan1.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-
-# 特定应用规则按照使用频率排序
+# 常用应用和服务优先匹配
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=📺B站,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
-
-# 常用服务规则
 ruleset=🤖AI,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/AI.list
 ruleset=📱电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+
+# 增加常用应用独立分组，提高精细化管理
+ruleset=📧邮件服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Mail.list
+ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SearchEngine/SearchEngine.yaml
+
+# 流媒体和游戏服务
 ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-# 增加游戏平台规则
+ruleset=🎬Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎬YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-# 增加微软规则
-ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 
-# 国内域名和IP规则
+# 大厂服务独立分组
+ruleset=🍎苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
+ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🟢Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
+
+# 直连规则
+ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/UnBan1.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/GoogleCN.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -497,14 +478,54 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/ref
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
-# 国外网站
-ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-# 增加社交媒体规则
-ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
+# 定制化社交媒体规则
+ruleset=📲社交媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Instagram.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Facebook.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Discord.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WhatsApp.list
 
-# 漏网之鱼放最后
+# 其他国外网站规则
+ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+
+# 漏网之鱼
 ruleset=🐟漏网之鱼,[]FINAL
+
+# 代理组配置部分
+# 增加更多分类代理组，提高使用灵活性
+custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
+custom_proxy_group=⚡低延迟`url-test`^`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=👆🏻指定`select`^
+
+# 直连和广告拦截组
+custom_proxy_group=🛩️墙内`select`[]DIRECT
+custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT
+
+# 媒体和社交应用组
+custom_proxy_group=📺B站`select`[]🛩️墙内`[]DIRECT`[]🇭🇰香港`[]🇹🇼台湾
+custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
+custom_proxy_group=🎬Netflix`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
+custom_proxy_group=🎬YouTube`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国
+custom_proxy_group=📲社交媒体`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
+custom_proxy_group=📱电报`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
+
+# 其他应用服务组
+custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他`[]✈️起飞`[]👆🏻指定
+custom_proxy_group=🎮游戏平台`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他
+custom_proxy_group=Ⓜ️微软服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
+custom_proxy_group=🍎苹果服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
+custom_proxy_group=🟢Spotify`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
+custom_proxy_group=📧邮件服务`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡
+custom_proxy_group=🔎搜索引擎`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
+custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告`[]DIRECT
+
+# 地区节点组
+custom_proxy_group=🇭🇰香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇹🇼台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇸🇬新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇯🇵日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇺🇸美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,300
+custom_proxy_group=🎏其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`30,,100
 
 # 在文件末尾添加DNS配置部分
 dns:
@@ -513,25 +534,55 @@ dns:
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  # 优化DNS服务器选择
   nameserver:
-  - 223.5.5.5
-  - 119.29.29.29
+    - 223.5.5.5 # 阿里DNS
+    - 119.29.29.29 # 腾讯DNS
+    - 114.114.114.114 # 114DNS
+  # 增加更多可靠的回落DNS
   fallback:
-  - https://cloudflare-dns.com/dns-query
-  - https://dns.google/dns-query
+    - https://dns.alidns.com/dns-query # 阿里加密DNS
+    - https://doh.pub/dns-query # 腾讯加密DNS
+    - https://cloudflare-dns.com/dns-query # Cloudflare
+    - https://dns.google/dns-query # Google
   fallback-filter:
-  geoip: true
-  geoip-code: CN
+    geoip: true
+    geoip-code: CN
+    # 排除私有IP范围
+    ipcidr:
+      - 240.0.0.0/4
+      - 127.0.0.1/8
+      - 0.0.0.0/8
+      - 10.0.0.0/8
+      - 172.16.0.0/12
+      - 192.168.0.0/16
 
 # 在文件末尾添加高级功能配置
+# 高级TUN配置，提高兼容性
+tun:
+  enable: true
+  stack: system # 或者使用 gvisor 以获得更好的兼容性
+  dns-hijack:
+    - any:53
+    - tcp://any:53
+  auto-route: true
+  auto-detect-interface: true
+  # 增加 Windows 优化
+  mtu: 9000 # 较大的MTU值可能提高性能
+
+  # 优化配置文件性能和用户体验
 profile:
   store-selected: true
   store-fake-ip: true
+  # 定期更新订阅
+  interval: 86400 # 每24小时更新一次
 
-tun:
+# 添加实验性功能支持(如果您的Clash版本支持)
+experimental:
+  ignore-resolve-fail: true # 忽略DNS解析失败
+
+# 缓存优化
+cache:
   enable: true
-  stack: system
-  dns-hijack:
-    - any:53
-  auto-route: true
-  auto-detect-interface: true
+  size: 10000
+  ttl: 3600 # 缓存1小时
