--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -442,6 +442,9 @@ ruleset=💩广告,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/BanPro
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 
 # 常用应用和服务优先匹配
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
@@ -542,28 +545,24 @@ dns:
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
-  # 优化DNS服务器选择
+  # 增加DoH/DoT加密DNS服务器
   nameserver:
     - 223.5.5.5 # 阿里DNS
     - 119.29.29.29 # 腾讯DNS
-    - 114.114.114.114 # 114DNS
-  # 增加更多可靠的回落DNS
-  fallback:
     - https://dns.alidns.com/dns-query # 阿里加密DNS
-    - https://doh.pub/dns-query # 腾讯加密DNS
-    - https://cloudflare-dns.com/dns-query # Cloudflare
+  fallback:
+    - https://dns.cloudflare.com/dns-query # Cloudflare
+    - https://doh.opendns.com/dns-query # OpenDNS
     - https://dns.google/dns-query # Google
-  fallback-filter:
-    geoip: true
-    geoip-code: CN
-    # 排除私有IP范围
-    ipcidr:
-      - 240.0.0.0/4
-      - 127.0.0.1/8
-      - 0.0.0.0/8
-      - 10.0.0.0/8
-      - 172.16.0.0/12
-      - 192.168.0.0/16
+  # 添加DNS防泄漏设置
+  default-nameserver:
+    - 223.5.5.5
+    - 119.29.29.29
+  # 防止DNS劫持
+  fake-ip-filter:
+    - '*.lan'
+    - 'stun.*.*.*'
+    - 'stun.*.*'
 
 mixin:
   # 优化UDP性能
@@ -576,24 +575,34 @@ mixin:
   # 提高TCP并发连接数
   tcp-concurrent: true
 
-# 高级TUN配置，提高兼容性
+# 高级TUN配置优化
 tun:
   enable: true
-  stack: system # 或者使用 gvisor 以获得更好的兼容性
+  stack: system
   dns-hijack:
     - any:53
     - tcp://any:53
   auto-route: true
   auto-detect-interface: true
-  # 增加 Windows 优化
-  mtu: 9000 # 较大的MTU值可能提高性能
+  mtu: 9000
+  # 添加路由排除列表，解决某些应用兼容性问题
+  bypass:
+    - 127.0.0.1/8
+    - 169.254.0.0/16
+    - 192.168.0.0/16
+    - 10.0.0.0/8
+    - 172.16.0.0/12
+    - 192.0.0.0/24
+    - 224.0.0.0/24
+    - ::1/128
+    - fc00::/7
+    - fe80::/10
 
-  # 优化配置文件性能和用户体验
+# 调整更新频率为每天一次，减少资源消耗
 profile:
   store-selected: true
   store-fake-ip: true
-  # 定期更新订阅
-  interval: 1800 # 每4小时更新一次
+  interval: 86400 # 每24小时更新一次，而非1800秒
 
 # 添加实验性功能支持(如果您的Clash版本支持)
 experimental:
@@ -603,4 +612,19 @@ experimental:
 cache:
   enable: true
   size: 10000
-  ttl: 3600 # 缓存1小时
+  ttl: 7200 # 增加到2小时
+  # 优化内存占用
+  memory-usage: 200 # 限制内存使用(MB)
+
+# TCP/UDP 流量分流配置
+sniffer:
+  enable: true
+  sniffing:
+    - tls
+    - http
+  # 强制域名嗅探，提高域名识别准确性
+  force-domain: true
+  # 跳过某些域名的嗅探
+  skip-domain:
+    - 'Mijia Cloud'
+    - 'dlg.io.mi.com'
