--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -578,13 +578,13 @@ mixin:
 # 高级TUN配置优化
 tun:
   enable: true
-  stack: system
+  stack: gvisor
   dns-hijack:
     - any:53
     - tcp://any:53
   auto-route: true
   auto-detect-interface: true
-  mtu: 9000
+  mtu: 1500
   # 添加路由排除列表，解决某些应用兼容性问题
   bypass:
     - 127.0.0.1/8
@@ -602,7 +602,7 @@ tun:
 profile:
   store-selected: true
   store-fake-ip: true
-  interval: 86400 # 每24小时更新一次，而非1800秒
+  interval: 14400 # 每4小时更新一次
 
 # 添加实验性功能支持(如果您的Clash版本支持)
 experimental:
