--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -522,40 +522,108 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 # 漏网之鱼
 ruleset=🐟漏网之鱼,[]FINAL
 
-# DNS配置优化 - 移动端友好版
+# ===== 基础设置 =====
+mixed-port: 10808
+allow-lan: true
+bind-address: '*'
+mode: rule
+log-level: warning
+ipv6: false
+external-controller: 127.0.0.1:9090
+external-ui: dashboard
+secret: ""
+
+# ===== 移动设备TUN优化配置 =====
+tun:
+  enable: true
+  stack: gvisor  # 移动设备推荐gvisor
+  dns-hijack:
+    - any:53
+    - tcp://any:53
+  auto-route: true
+  auto-detect-interface: true
+  mtu: 1400  # 移动设备更适合的MTU值，降低分片风险
+  # 移动设备TUN性能优化
+  tcp-balance: true             # TCP负载均衡
+  udp-balance: true             # UDP负载均衡
+  stack-buffer: 4096            # 堆栈缓冲大小优化
+  endpoint-independent-nat: true  # 独立端点NAT，提高兼容性
+  # 优化路由排除列表
+  bypass:
+    - 127.0.0.1/8
+    - 169.254.0.0/16
+    - 192.168.0.0/16
+    - 10.0.0.0/8
+    - 172.16.0.0/12
+    - 192.0.0.0/24
+    - 224.0.0.0/24
+    - ::1/128
+    - fc00::/7
+    - fe80::/10
+    - fd00::/8
+
+# ===== DNS配置优化 - 移动端友好版 =====
 dns:
   enable: true
   ipv6: false
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  use-hosts: true  # 添加hosts支持，可提高某些域名解析速度
+  # 预加载常用域名DNS
+  preload-domain: true
+  # 提高DNS响应速度的参数
+  nameserver-cache-size: 4096  # 增加DNS缓存条目数
+  prefer-h3: true  # 首选HTTP/3进行DNS查询，提高性能
+
+  # 防泄漏默认DNS - 放在最前面确保优先级
+  default-nameserver:
+    - 223.6.6.6
+    - 8.8.8.8
+
+  # 移动端友好DNS服务器 - 降低延迟和电池消耗
+  nameserver:
+    - https://223.6.6.6/dns-query # 阿里DNS DoH
+    - 223.6.6.6 # 阿里DNS备用
+
+  # 精简国际回落DNS列表 - 移动端优化
+  fallback:
+    - https://dns.alidns.com/dns-query # 阿里
+    - https://dns.google/dns-query # Google
+    - https://dns.cloudflare.com/dns-query # Cloudflare
+
+  # 代理服务器DNS
+  proxy-server-nameserver:
+    - https://dns.alidns.com/dns-query # 阿里
+    - https://dns.google/dns-query # Google
 
   # 优化DNS分流策略，更精细的域名分类
   nameserver-policy:
-    'geosite:cn,microsoft-cn,apple-cn,category-games-cn': [223.5.5.5, 119.29.29.29]
+    'geosite:cn,microsoft-cn,apple-cn,category-games-cn': [223.6.6.6, 119.29.29.29]
     'geosite:geolocation-!cn,category-dev,category-science': [https://dns.cloudflare.com/dns-query, https://dns.google/dns-query]
     'geosite:category-ads-all': [https://doh.alidns.com/dns-query]
     'domain:office.com,domain:office365.com,domain:sharepoint.com': [tls://dns.quad9.net, https://dns.cloudflare.com/dns-query]
     'domain:twitter.com,domain:instagram.com': [https://dns.google/dns-query]  # 社交媒体特别优化
+    'domain:cdn.jsdelivr.net': [https://223.5.5.5/dns-query, https://doh.pub/dns-query]
+    'domain:fastly.net': [https://doh.pub/dns-query]
+    'domain:akamaiedge.net': [https://223.5.5.5/dns-query]
+    'domain:cloudfront.net': [https://dns.google/dns-query]
 
-  # 移动端友好DNS服务器 - 降低延迟和电池消耗
-  nameserver:
-    - https://223.5.5.5/dns-query # 阿里DNS DoH
-    - https://doh.pub/dns-query # 腾讯DoH
-    - 223.5.5.5 # 阿里DNS备用
-    - 119.29.29.29 # 腾讯DNS备用
+  # 常用域名TTL优化
+  domain-ttl:
+    'apple.com': 3600
+    'microsoft.com': 3600
+    'qq.com': 3600
+    'taobao.com': 3600
+    'baidu.com': 3600
+    'jd.com': 3600
+    'google.com': 3600
 
-  # 精简国际回落DNS列表 - 移动端优化
-  fallback:
-    - https://doh.dns.sb/dns-query # DNS.SB更稳定
-    - https://dns.cloudflare.com/dns-query # Cloudflare
-    - https://dns.google/dns-query # Google
-
-  # 防泄漏默认DNS
-  default-nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
-    - 1.0.0.1
+  # 本地hosts优先级(比远程DNS更优先)
+  hosts:
+    'mtalk.google.com': 108.177.125.188
+    'dl.google.com': 142.250.4.132
+    'mobile-gtalk.l.google.com': 108.177.125.188
 
   # 增强防DNS劫持，扩充fake-ip过滤清单
   fake-ip-filter:
@@ -588,93 +656,178 @@ dns:
     - 'time.windows.com'
     - 'tracker.*.*'  # 过滤BT/PT流量，降低流量消耗
     - 'seed.*.*'     # 过滤BT/PT流量，降低流量消耗
+    - '*.pool.ntp.org' # 添加NTP服务器域名
 
-# 移动设备TUN优化配置
-tun:
-  enable: true
-  stack: system
-  dns-hijack:
-    - any:53
-    - tcp://any:53
-  auto-route: true
-  auto-detect-interface: true
-  mtu: 1400  # 移动设备更适合的MTU值，降低分片风险
-  # 优化路由排除列表
-  bypass:
-    - 127.0.0.1/8
-    - 169.254.0.0/16
-    - 192.168.0.0/16
-    - 10.0.0.0/8
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 224.0.0.0/24
-    - ::1/128
-    - fc00::/7
-    - fe80::/10
-    - fd00::/8
+# ===== 连接与性能优化 =====
+# 优化TCP连接
+tcp-concurrent: true            # 开启TCP并发，提高多连接性能
+tcp-concurrent-max: 512         # 最大并发TCP连接
+tcp-concurrent-reuse: true      # 复用并发连接
+tcp-fast-open-queue: 512        # TCP Fast Open队列大小
+tcp-no-delay: true              # 启用TCP No Delay，减少延迟
+inbound-tfo: true               # 入站TCP Fast Open
+outbound-tfo: true              # 出站TCP Fast Open
+inbound-buffer-size: 8192       # 移动设备内存优化
+outbound-buffer-size: 8192      # 移动设备内存优化
+buffer-size: 16384              # 整体缓冲区大小
 
-# 移动设备TCP优化配置 - 均衡性能与电池消耗
-tcp-concurrent: true
-keep-alive-interval: 30  # 移动设备电池优化，延长间隔
-inbound-tfo: true
-outbound-tfo: true
-inbound-buffer-size: 8192  # 移动设备内存优化
-outbound-buffer-size: 8192  # 移动设备内存优化
+# 连接性能优化
+connection-timeout: 5           # 连接超时5秒(减少等待时间)
+dial-timeout: 3                 # 拨号超时3秒
+keep-alive-interval: 30         # 单位：秒，移动设备电池优化
+find-process-refresh-interval: 30  # 进程刷新间隔(秒)
+disable-logger: true            # 禁用日志记录，降低开销
 
-# 智能断线重连设置 - 移动网络特别优化
+# 智能断线重连设置
 auto-reconnect: true
 reconnect-interval: 3  # 移动网络下的合理重连间隔
 
-# 移动设备缓存优化设置
+# 缓存优化设置
 cache:
   enable: true
-  size: 8192  # 适合移动设备的缓存大小
-  ttl: 3600
+  size: 8192  # 适合移动设备的缓存大小（单位KB）
+  ttl: 3600   # 缓存时间（秒）
   store-fakeip: true
-  persistence: true
+  persistence: true  # 持久化缓存，应用退出后保留
+  memory-ratio: 0.2             # 内存缓存比例，避免占用过多内存
+  disk-ratio: 0.8               # 磁盘缓存比例
+  optimistic-dns: true          # 乐观DNS缓存，提高响应速度
 
-# 移动设备流量嗅探优化
+# 规则缓存优化
+rule-cache:
+  enable: true                  # 启用规则缓存
+  size: 10240                   # 缓存大小
+  ttl: 7200                     # 有效期2小时
+
+# ===== 流量与内容检测 =====
+# 流量嗅探设置
 sniff:
   enable: true
   override-destination: true
   parse-pure-ip: true
+  # 添加嗅探资源类型
+  force-domain: true
+  skip-domain:
+    - '*.alipay.com'  # 跳过某些敏感域名，避免误判
+    - '*.pay.*.com'
 
-# 移动设备合理缓冲区大小
-buffer-size: 16384  # 降低内存占用
-
-# 电池优化的TCP保活设置
-keep-alive-interval: 45  # 移动设备下更省电
-
-# 移动设备实验性功能支持
-experimental:
-  ignore-resolve-fail: true
-  routing-mark: 255
-
-# 精简流量嗅探配置 - 移动设备优化
+# 精细化嗅探器配置
 sniffer:
   enable: true
   sniff:
     http: true
     tls: true
     quic: true
+    mtls: true  # 添加更多协议支持
   force-domain: true
   skip-domain:
     - 'Mijia Cloud'
     - 'dlg.io.mi.com'
     - '*.alipay.com'
     - '*.weixin.qq.com'  # 跳过微信服务，优化移动体验
+    - '*.pay.*.com'      # 跳过支付相关域名
   port-whitelist:
     - 80
     - 443
     - 8000-9000
+  # 添加优化移动设备常用端口
+  sniffing-timeout: 200  # 移动设备嗅探超时时间（毫秒）
 
-# 移动设备全局优化参数
-global-client-fingerprint: chrome
-find-process-mode: always  # 移动设备更精准的进程控制
+# ===== 移动设备特殊优化 =====
+# 移动设备电量优化配置
+profile:
+  store-selected: true
+  store-fake-ip: true
+  tracing: false  # 关闭追踪功能节省电量
+
+# 智能网络切换处理
+wifi-ssid-switch:
+  enable: true
+  default: "DIRECT"
+  ssid:
+    "home-wifi": "DEFAULT"
+    "work-wifi": "PROXY"
+    "pay-wifi": "DIRECT"
+
+# 低电量模式设置
+battery-saver:
+  enable: true
+  threshold: 20  # 电量低于20%时启用省电模式
+  save-mode:
+    tcp-concurrent: false # 低电量时关闭并发连接
+    keep-alive-interval: 60 # 低电量时延长保活间隔
+    sniff: selective # 低电量时仅选择性嗅探
+
+# 内存使用优化
+memory:
+  optimize-for: speed           # 优化速度而非内存占用
+  gc-interval: 300              # 垃圾回收间隔(秒)
+  max-log-size: 1               # 最大日志大小(MB)
+
+# 低延迟模式
+low-latency-mode:
+  enable: true                  # 启用低延迟模式
+  # 低延迟下的优化设置
+  handshake-timeout: 3          # 握手超时(秒)
+  socket-buffer-size: 16384     # 套接字缓冲区大小
+
+# 移动设备高级优化
+mobile-optimization:
+  enable: true                  # 启用移动优化
+  # 移动设备特定优化
+  wake-lock: selective          # 选择性使用唤醒锁
+  reduce-background-traffic: true  # 减少后台流量
+  prioritize-interactive-traffic: true  # 交互流量优先
+
+# QUIC协议支持(HTTP/3)
+quic:
+  enable: true                  # 启用QUIC支持
+  max-idle-timeout: 30          # 最大空闲超时(秒)
+  keep-alive-interval: 15       # 保活间隔(秒)
+  0-rtt: true                   # 启用0-RTT，降低延迟
+
+# 针对不同网络的自适应优化
+network-profiles:
+  wifi:
+    # WiFi网络下的最佳性能设置
+    buffer-size: 32768
+    tcp-concurrent: true
+    keep-alive-interval: 15
+    dns-prefetch: aggressive
+  mobile:
+    # 移动数据下的最佳性能/功耗平衡
+    buffer-size: 8192
+    tcp-concurrent: selective
+    keep-alive-interval: 45
+    dns-prefetch: conservative
+  roaming:
+    # 漫游状态下的设置
+    buffer-size: 4096
+    tcp-concurrent: false
+    keep-alive-interval: 60
+    dns-prefetch: disabled
+
+# ===== 全局设置与实验功能 =====
+# 地理位置数据加载
 geodata-mode: true
 geodata-loader: standard  # 移动设备使用标准加载器，平衡内存与性能
+global-client-fingerprint: chrome  # 统一客户端指纹
+find-process-mode: always  # 移动设备更精准的进程控制
 
-# 移动网络特定优化参数
+# 移动网络测试参数
 internet-test-url: http://www.gstatic.com/generate_204  # 连接测试优化
 proxy-test-url: http://cp.cloudflare.com/generate_204  # 代理测试优化
-test-timeout: 5  # 移动网络测试超时设置
+test-timeout: 5  # 移动网络测试超时设置（秒）
+
+# 实验性功能支持
+experimental:
+  ignore-resolve-fail: true     # 忽略解析失败，提高移动网络稳定性
+  routing-mark: 255
+  # 添加移动设备实验性优化
+  clash-for-android:
+    append-system-dns: false    # 不追加系统DNS，避免泄露
+    ui-delay-connect: true      # UI连接延迟，提高响应性
+  quic-receive-window: 16777216 # QUIC接收窗口大小优化
+  bbr: true                     # 启用BBR拥塞控制算法
+  optimistic-connection: true   # 乐观连接策略
+  compression: true             # 启用压缩
